# Substrate-HotStuff

./: .gitignore  .gitmodules  Cargo.toml  README.md  committee.json  nodekey  rust-toolchain.toml  rustfmt.toml
.github/workflows/: hotstuff_tests.yml
client/consensus/: Cargo.toml
client/consensus/src/: block_building_info.rs  import.rs  import_queue.rs  lib.rs  standalone.rs  tests.rs
client/finality/: Cargo.toml
client/finality-tendermint/: Cargo.toml  README.md
client/finality-tendermint/src/: authorities.rs  aux_schema.rs  environment.rs  import.rs  justification.rs  lib.rs  notification.rs  until_imported.rs  warp_proof.rs
client/finality-tendermint/src/communication/: gossip.rs  mod.rs  periodic.rs
client/finality/src/: lib.rs
client/grandpa/: Cargo.toml
client/grandpa/rpc/src/: lib.rs
client/grandpa/src/: aux_schema.rs  environment.rs  finality_proof.rs  import.rs  justification.rs  lib.rs  notification.rs  observer.rs  tests.rs  until_imported.rs  voting_rule.rs  warp_proof.rs
client/grandpa/src/communication/: gossip.rs  mod.rs  periodic.rs  tests.rs
client/service/: Cargo.toml
client/service/src/: lib.rs
client/slots/: Cargo.toml
client/slots/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: aggregator.rs  config.rs  consensus.rs  core.rs  error.rs  helper.rs  leader.rs  lib.rs  mempool.rs  messages.rs  proposer.rs  synchronizer.rs  timer.rs
consensus/src/tests/: aggregator_tests.rs  common.rs  consensus_tests.rs  core_tests.rs  helper_tests.rs  messages_tests.rs  synchronizer_tests.rs  timer_tests.rs
consensus_aura/: Cargo.toml
consensus_aura/src/: import_queue.rs  lib.rs  standalone.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/tests/: crypto_tests.rs
finality-grandpa/src/voter/: mod.rs  voting_round.rs
finality-tendermint/: Cargo.toml  README.md
finality-tendermint/src/: environment.rs  lib.rs  messages.rs  rpc.rs  voter.rs
finality-tendermint/src/testing/: chain.rs  environment.rs  mod.rs  network.rs
hotstuff/: Cargo.toml  README.md
hotstuff/consensus/: Cargo.toml
hotstuff/consensus/src/: aggregator.rs  authorities.rs  aux_schema.rs  client.rs  consensus.rs  import.rs  message.rs  network.rs  primitives.rs  store.rs  synchronizer.rs
hotstuff/consensus/src/tests/: consensus_tests.rs  message_tests.rs
hotstuff/pallets/hotstuff/: Cargo.toml
hotstuff/pallets/hotstuff/src/: lib.rs
hotstuff/primitives/: Cargo.toml
hotstuff/primitives/src/: commitment.rs  inherents.rs  lib.rs
hotstuff/src/: aggregator.rs  authorities.rs  aux_schema.rs  block_producer.rs  client.rs  config.rs  consensus.rs  finalize_block.rs  gossip.rs  import.rs  leader.rs  lib.rs  message.rs  network.rs  network_bridge.rs  params.rs  primitives.rs  qc.rs  store.rs  synchronizer.rs  types.rs  validator.rs  voter.rs  voter_task.rs  voting_handler.rs  worker.rs
hotstuff/src/tests/: consensus_tests.rs  message_tests.rs
mempool/: Cargo.toml
mempool/src/: batch_maker.rs  config.rs  helper.rs  lib.rs  mempool.rs  processor.rs  quorum_waiter.rs  synchronizer.rs
mempool/src/tests/: batch_maker_tests.rs  common.rs  helper_tests.rs  mempool_tests.rs  processor_tests.rs  quorum_waiter_tests.rs  synchronizer_tests.rs
network/: Cargo.toml
network/src/: error.rs  lib.rs  receiver.rs  reliable_sender.rs  simple_sender.rs
network/src/tests/: common.rs  receiver_tests.rs  reliable_sender_tests.rs  simple_sender_tests.rs
node/: Cargo.toml
node-template/: .gitignore  README.md
node-template/node/: Cargo.toml
node-template/node/src/: chain_spec.rs  command.rs  node.rs  service.rs
node-template/runtime/: Cargo.toml
node-template/runtime/src/: lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  service.rs
pallets/aura/: Cargo.toml
pallets/aura/src/: lib.rs  migrations.rs  mock.rs  tests.rs
pallets/hotstuff/: Cargo.toml
pallets/hotstuff/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/tendermint/: Cargo.toml
pallets/tendermint/src/: lib.rs
primitives/consensus/hotstuff/: Cargo.toml
primitives/consensus/hotstuff/src/: digests.rs  inherents.rs  lib.rs  payload.rs
primitives/finality-tendermint/: Cargo.toml
primitives/finality-tendermint/src/: lib.rs
primitives/hotstuff/: Cargo.toml
primitives/hotstuff/src/: lib.rs
primitives/hotstuff_finality/: Cargo.toml
primitives/hotstuff_finality/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
store/: Cargo.toml
store/src/: lib.rs
store/src/tests/: store_tests.rs
