[workspace]
resolver = "2"
members = [
    "node",
    "pallets/template",
    "pallets/tendermint",
    "runtime",
    "store", 
    "crypto", 
    "network", 
    "mempool", 
    "consensus",
    "primitives/finality-tendermint",
    "client/finality-tendermint",
]
[profile.release]
panic = "unwind"


# [patch.crates-io]
# finality-tendermint = { path = "./client/finality-tendermint" }