[workspace]
resolver = "2"

members = [
	"hotstuff/consensus",
    "hotstuff/primitives",
    "hotstuff/pallets/hotstuff",
	"node-template/node",
	"node-template/runtime",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
