[package]
name = "sc-consensus-aura"
version = "0.10.0-dev"
authors = ["Web3MQ"]
description = "Aura consensus algorithm for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.6.1" }
futures = "0.3.21"
log = "0.4.17"
thiserror = "1.0"

prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-block-builder = { version = "0.10.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-client-api = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-consensus = { version = "0.10.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-consensus-slots = { version = "0.10.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-telemetry = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-api = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-application-crypto = { version = "23.0.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-block-builder = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-blockchain = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus = { version = "0.10.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-aura = { version = "0.10.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-slots = { version = "0.10.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { version = "21.0.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-inherents = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-keystore = { version = "0.27.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[dev-dependencies]
parking_lot = "0.12.1"
tempfile = "3.1.0"
# sc-keystore = { version = "4.0.0-dev", path = "../../keystore" }
# sc-network = { version = "0.10.0-dev", path = "../../network" }
# sc-network-test = { version = "0.8.0", path = "../../network/test" }
# sp-keyring = { version = "24.0.0", path = "../../../primitives/keyring" }
# sp-timestamp = { version = "4.0.0-dev", path = "../../../primitives/timestamp" }
# sp-tracing = { version = "10.0.0", path = "../../../primitives/tracing" }
# substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
tokio = { version = "1.22.0" }

sc-keystore = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-network = { version = "0.10.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-network-test = { version = "0.8.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-keyring = { version = "24.0.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-timestamp = { version = "4.0.0-dev",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-tracing = { version = "10.0.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
substrate-test-runtime-client = { version = "2.0.0",git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }