[package]
name = "finality-tendermint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-feature = false, features = ["async-await"]}
futures-timer = { version = "3.0", optional = true }
log = { version = "0.4", optional = true }
num = { package = "num-traits", version = "0.2", default-features = false }
parking_lot = { version = "0.12", optional = true }
# tokio = { version = "1.20.1", features = ["full"]}
tokio = { version = "1.20.1", features = ["time", "macros"]}
tracing = {version = "0.1", default-features = false, features=["log"]}
parity-scale-codec = { version = "3", default-features = false, optional = true, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, optional = true, features = [
    "derive",
] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"]}
tracing-subscriber = "0.3"
tracing = {version = "0.1"} 

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "num/std",
    "parking_lot",
    "log",
    "futures-timer",
    "futures/executor",
    "tracing/std",
    "scale-info/std",
]

derive-codec = ["parity-scale-codec", "scale-info"]
test-helpers = ["fuzz-helpers", "std", "deadlock_detection"]
deadlock_detection = [
  "parking_lot/deadlock_detection"
]
fuzz-helpers = []

[profile.test]
panic = "abort"
